--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,12 +4,12 @@
         <div class="navbar-header w-75 p-2">
             <div class="logoSection row w-100">
                 <div class="col">
-                    <a href="/home"><i class="fa-solid fa-bars"></i></a>
+                    <a href="/home"><i class="fa-solid fa-bars fa-lg"></i></a>
                     <img th:src="@{/images/phyh.jpg}" height="50" width="200"/>
                 </div>
                 <div class="col-lg-4 p-2">
-                    <a href="/home"><i class="fa-solid fa-magnifying-glass"></i></a>
-                    <a href="/home"><i class="fa-solid fa-user"></i></a>
+                    <a href="/home"><i class="fa-solid fa-magnifying-glass fa-lg"></i></a>
+                    <a href="/home"><i class="fa-solid fa-user fa-lg"></i></a>
                 </div>
             </div>
         </div>
