Post and Comment implementation

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,23 +1,18 @@
 <nav id="main-nav" class="navbar navbar-default navbar-fixed-top" role="banner">
-    <div class="container">
+    <div class="container mb-4">
 
-        <div class="navbar-header w-75 p-2">
+        <div class="navbar">
             <div class="logoSection row w-100">
                 <div class="col">
-                    <a href="/home"><i class="fa-solid fa-bars fa-lg"></i></a>
+                    <a href="/home"><i class="fa-solid fa-bars fa-2x"></i></a>
                     <img th:src="@{/images/phyh.jpg}" height="50" width="200"/>
                 </div>
-                <div class="col-lg-4 p-2">
-                    <a href="/home"><i class="fa-solid fa-magnifying-glass fa-lg"></i></a>
-                    <a href="/home"><i class="fa-solid fa-user fa-lg"></i></a>
+                <div class="col">
+                    <a href="/home"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
+                    <a href="/home"><i class="fa-solid fa-user fa-2x"></i></a>
                 </div>
             </div>
         </div>
 
-        <div class="collapse navbar-collapse navbar-right">
-            <ul class="nav navbar-nav">
-                <li class="scroll"><a href="/home">Home</a></li>
-            </ul>
-        </div>
     </div><!--/.container-->
 </nav><!--/nav-->
