--- a/src/main/resources/templates/addPlan.html
+++ b/src/main/resources/templates/addPlan.html
@@ -1,4 +1,23 @@
-<div class="card">
+<style>
+    .container-header{
+        display: flex;
+    }
+    h4{
+        font-size: 2.5rem;
+    }
+    .fa-caret-left:hover{
+        color:red !important;
+    }
+</style>
+<div class="container">
+    <hr>
+    <div class="container-header">
+        <tr>
+            <td><a href="/home"><i class="fa-solid fa-caret-left fa-3x"></i></a></td>
+            <td><h4>ADD PLAN</h4></td>
+        </tr>
+    </div>
+    <hr>
     <div class="card-header">
         <p class="h4 mb-2 text-center">Add Plan</p>
     </div>
@@ -17,7 +36,7 @@
                    placeholder="Time Plan">
             <!-- Category -->
             <textarea class="form-control mb-4" id="category" name="category"
-                      placeholder="Plan Category">Product Category
+                      placeholder="Plan Category">Plan Category
                                  </textarea>
             <div class="custom-file mb-4">
                 <input type="file" name="file" class="custom-file-input"
@@ -25,7 +44,7 @@
                                                for="customFile">Product Image</label>
             </div>
             <!-- Sign in button -->
-            <button class="btn btn-info btn-block" type="submit">add</button>
+            <button type="button" class="btn btn-primary">ADD</button>
         </form>
     </div>
 </div>
