--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,18 +1,70 @@
-<nav id="main-nav" class="navbar navbar-default navbar-fixed-top" role="banner">
-    <div class="container mb-4">
 
-        <div class="navbar">
-            <div class="logoSection row w-100">
-                <div class="col">
-                    <a href="/home"><i class="fa-solid fa-bars fa-2x"></i></a>
-                    <img th:src="@{/images/phyh.jpg}" height="50" width="200"/>
-                </div>
-                <div class="col">
-                    <a href="/home"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
-                    <a href="/home"><i class="fa-solid fa-user fa-2x"></i></a>
-                </div>
-            </div>
-        </div>
+<div class="header">
+        <img th:src="@{/images/phyh.jpg}" class="responsive"/>
+        <a href="/home" class="logo">HOME</a>
+        <a href="/profile" class="logo">PROFILE</a>
+        <a href="/favorite" class="logo">FAVORITE PLANS</a>
+    <div class="header-right">
+        <a href="/home"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
+        <a href="/profile"><i class="fa-solid fa-user fa-2x"></i></a>
+    </div>
+</div>
+<style>
+    .header {
+        overflow: hidden;
+        background-color: #f1f1f1;
+        padding: 20px 10px;
+    }
+    .header a {
+        float: left;
+        color: black;
+        text-align: center;
+        padding: 12px;
+        text-decoration: none;
+        font-size: 18px;
+        line-height: 25px;
+        border-radius: 4px;
+    }
 
-    </div><!--/.container-->
-</nav><!--/nav-->
+    /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+    .header a.logo {
+        font-size: 25px;
+        font-weight: bold;
+    }
+
+    /* Change the background color on mouse-over */
+    .header a:hover {
+        background-color: #ddd;
+        color: black;
+    }
+
+    /* Style the active/current link*/
+    .header a.active {
+        background-color: dodgerblue;
+        color: white;
+    }
+
+    /* Float the link section to the right */
+    .header-right {
+        float: right;
+    }
+
+    /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+    @media screen and (max-width: 500px) {
+        .header a {
+            float: none;
+            display: block;
+            text-align: left;
+        }
+        .header-right {
+            float: none;
+        }
+    }
+    .responsive{
+        width: 100%;
+        height: auto;
+        max-width:300px;
+        mix-blend-mode: multiply;
+        float: left;
+    }
+</style>
