--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
 <style>
     * {
         box-sizing: border-box;
@@ -50,14 +44,11 @@
         background-color: #04AA6D;
         color: forestgreen;
     }
-    img {
-        margin-left: 60px;
-    }
     .container-header{
         display: flex;
     }
     h4{
-        margin-top: 10px;
+        font-size: 2.5rem;
     }
     .fa-brands:hover{
         color:red !important;
@@ -85,14 +76,15 @@
 <div class="row">
     <div class="column">
         <div class="card">
-            <tr><td><img th:src="@{/images/profile.jpg}" height="150" width="150"/></td></tr>
-            <tr>
-                <div class="title">
-                    <td th:text="${profile.getName()}"></td>
-                    <td th:text="${profile.getSurname()}"></td>
-                </div>
+            <div class="card-body">
+                <th scope="row">
+                    <td>
+                <img th:src="@{/images/profile.jpg}" height="150" width="150"/></td><br>
+                <td th:text="${profile.getName()+' '+profile.getSurname()}"></td>
+                </th>
             </tr>
         </div>
+    </div>
     </div>
     <div class="column">
         <div class="card">
