--- a/src/main/resources/templates/addPlan.html
+++ b/src/main/resources/templates/addPlan.html
@@ -44,7 +44,7 @@
                                                for="customFile">Product Image</label>
             </div>
             <!-- Sign in button -->
-            <button type="button" class="btn btn-primary">ADD</button>
+            <button type="submit" class="btn btn-primary">ADD</button>
         </form>
     </div>
 </div>
