--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -79,7 +79,7 @@
             <div class="card-body">
                 <th scope="row">
                     <td>
-                <img th:src="@{/images/profile.jpg}" height="150" width="150"/></td><br>
+                <img th:src="@{/resources/images/profile.jpg}" height="150" width="150"/></td><br>
                 <td th:text="${profile.getName()+' '+profile.getSurname()}"></td>
                 </th>
             </tr>
