--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,4 +1,7 @@
-<div class="container">
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<th:block xmlns:th="http://www.thymeleaf.org">
+  <div class="container mb-4">
   <form class="form-signin mt-xl-5" method="post" action="/login">
     <h2 class="form-signin-heading">Sign in</h2>
     <p>
@@ -17,4 +20,5 @@
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
   </form>
   <a href="/register" class="btn btn-block btn-light">Register here</a>
-</div>
+ </div>
+</th:block>
