--- a/src/main/resources/templates/master-template.html
+++ b/src/main/resources/templates/master-template.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>PhysicalApplication</title>
-    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
-    <link th:href="@{/css/font-awesome.min.css}" rel="stylesheet">
-    <link th:href="@{/css/animate.min.css}" rel="stylesheet">
-    <link th:href="@{/css/owl.carousel.css}" rel="stylesheet">
-    <link th:href="@{/css/owl.transitions.css}" rel="stylesheet">
-    <link th:href="@{/css/prettyPhoto.css}" rel="stylesheet">
-    <link th:href="@{/css/magnific-popup.css}" rel="stylesheet">
-    <link th:href="@{/css/gallery-1.css}" rel="stylesheet">
-    <link th:href="@{/css/styles.css}" rel="stylesheet">
+    <link th:href="@{/resources/css/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{/resources/css/font-awesome.min.css}" rel="stylesheet">
+    <link th:href="@{/resources/css/animate.min.css}" rel="stylesheet">
+    <link th:href="@{/resources/css/owl.carousel.css}" rel="stylesheet">
+    <link th:href="@{/resources/css/owl.transitions.css}" rel="stylesheet">
+    <link th:href="@{/resources/css/prettyPhoto.css}" rel="stylesheet">
+    <link th:href="@{/resources/css/magnific-popup.css}" rel="stylesheet">
+    <link th:href="@{/resources/css/gallery-1.css}" rel="stylesheet">
+    <link th:href="@{/resources/css/styles.css}" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f68b879a4f.js" crossorigin="anonymous"></script>
-    <script th:src="@{/js/bootstrap.bundle.js}"></script>
-    <script th:src="@{/js/bootstrap.esm.js}"></script>
-    <script th:src="@{/js/bootstrap.js}"></script>
+    <script th:src="@{/resources/js/bootstrap.bundle.js}"></script>
+    <script th:src="@{/resources/js/bootstrap.esm.js}"></script>
+    <script th:src="@{/resources/js/bootstrap.js}"></script>
 </head>
 <body>
 <header th:replace="fragments/header"/>
