--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<th:block xmlns:th="http://www.thymeleaf.org">
 <div class="container" >
   <h1 th:if="${hasError}" th:text="${error}"></h1>
 </div>
@@ -51,3 +54,4 @@
   </form>
   <a href="/login" class="btn btn-block btn-light">Already have an account? Login here!</a>
 </div>
+</th:block>
