--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,8 +5,8 @@
         <a href="/profile" class="logo">PROFILE</a>
         <a href="/favorite" class="logo">FAVORITE PLANS</a>
     <div class="header-right">
-        <a href="/home"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
-        <a href="/profile"><i class="fa-solid fa-user fa-2x"></i></a>
+        <a href="/home"><i class="fa-solid fa-magnifying-glass"></i></a>
+        <a href="/profile"><i class="fa-solid fa-user"></i></a>
         <a class="btn btn-light btn-sm ml-3" href="/logout">
             <i class="fa-sharp fa-solid fa-right-from-bracket"></i> Logout
         </a>
@@ -31,7 +31,7 @@
 
     /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
     .header a.logo {
-        font-size: 25px;
+        font-size: 18px;
         font-weight: bold;
     }
 
@@ -66,7 +66,7 @@
     .responsive{
         width: 100%;
         height: auto;
-        max-width:300px;
+        max-width:200px;
         mix-blend-mode: multiply;
         float: left;
     }
